# UAI-USB-BOOT

./: .editorconfig  .pre-commit-config.yaml  .yamllint.yaml  README.md  auto-network.sh  build_uai_usb.sh  careful_usb_build.sh  cluster-monitor.sh  deploy-uai-usb-boot.sh  docker-compose.yml  grafana-dashboards.yml  grafana-datasources.yml  init-swarm.sh  install-ubuntu-to-ssd.sh  loki-config.yml  prometheus.yml  promtail-config.yml  pyproject.toml  redis.conf  self-healing.sh  service-discovery.sh  setup-cross-node.sh  setup-distributed-storage.sh  traefik.yml  uai-platform-dashboard.json  usb-multiboot-builder.sh  usb-pro-builder.sh  validate-deployment.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  GHCR_PAT_INSTRUCTIONS.md  ISSUE_IMAP_KEYVAULT_BODY.md  ISSUE_KEYVAULT_ADD_CI_WORKFLOW.md  ISSUE_KEYVAULT_ADD_SECRETS.md  ISSUE_KEYVAULT_LOCAL_RUN.md  ISSUE_KEYVAULT_SP_SETUP.md  SECRETS_HANDLING.md  cliff.toml  dependabot.yml  labeler.yml  pr_ruff_fixes_body.txt
.github/ISSUES/: missing-credentials-audit.md
.github/ISSUE_TEMPLATE/: emergency-suspend-cloud.yml  phase-gap.yml
.github/ci/: requirements-railway-check.txt
.github/notify-templates/: README.md
.github/scripts/: fetch_build_logs.py  patch_and_deploy_render.py  run_smoke_tests.py  wait_for_render_deploy.py
.github/workflows/: actions-credit-guard-enhanced.yml  actions-credit-guard.yml  artifact-usage-report.yml  auto-merge-automated-prs.yml  auto-merge-on-issue-116.yml  auto_merge_prs.yml  auto_rotate_secrets.yml  automated_secret_scan.yml  branch-management.yml  build-push-uai-core.yml  build-railway-image.yml  build-ssh-gateway.yml  build-ssh-key-server.yml  check-railway-deprecation.yml  check_conflict_markers.yml  ci-cd-pipeline.yml  ci-triage.yml  ci.yml  cloudflare-deploy.yml  create-render-docker-service.yml  dashboard-update.yml  debug-workspace.yml  deploy-image-to-render.yml  deploy-to-render.yml  dispatch-root-owned-precheck.yml  distribute-swarm-token.yml  docker-build-and-push.yml  docker-build-self-hosted.yml  e2e-deploy-test.yml  e2e.yml  (+61 more)
docs/: PURGE_ANNOUNCEMENT.md
scripts/: branch_cleanup.sh
