[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uai-copilot-automation-tool"
version = "147.0"
description = "UAI Consciousness Evolution Platform"
authors = [
    {name = "Roman Yushchyk", email = "roman@example.com"},
]
dependencies = [
    "Flask==3.1.2",
    "flask-cors==4.0.0",
    "Werkzeug==2.3.7",
    "requests==2.31.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.19.0",
    "psutil>=5.9.3",
    "redis>=4.6.0",
    "langchain==0.1.0",
    "langchain-openai==0.0.5",
    "langchain-pinecone==0.2.13",
    "openai>=1.10.0,<2.0.0",
    "pinecone-client>=3.0.0,<7.0.0",
    "SQLAlchemy>=1.4.0,<3.0.0",
    "uvicorn>=0.22.0",
    "fastapi>=0.100.0",
    "tiktoken==0.12.0",
    "faiss-cpu==1.8.0",
    "chromadb==0.4.18",
    "sentence-transformers==2.2.2",
    "pypdf==6.7.0",
    "python-docx==1.1.0",
    "unstructured==0.18.31",
    "azure-identity==1.15.0",
    "azure-keyvault-secrets==4.10.0",
    "azure-storage-blob==12.17.0",
    "redis==7.1.0",
    "psutil==5.9.6",
    "docusign-esign==6.0.0",
    "PyYAML>=6.0",
    "prometheus_client>=0.24.1",
    "kafka-python>=2.3.0",
    "fastsafetensors>=0.1.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "S101", "S104", "F401", "F841", "E402", "E712"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
